# turbo-hipster

./: .gitignore  .gitreview  .testr.conf  README.md  config.json  requirements.txt  results.json  setup.cfg  setup.py  test-requirements.txt  tox.ini  worker_manager.py  worker_server.py
datasets/datasets_devstack_131007/131007_devstack_export/: config.json  input.json
datasets/datasets_devstack_150/datasets_devstack_150/: config.json  input.json
datasets/datasets_trivial_500/nova_trivial_500/: config.json  input.json
datasets/datasets_trivial_6000/nova_trivial_6000/: config.json  input.json
datasets/datasets_user_001/user_001/: config.json  input.json
datasets/datasets_user_002/user_002/: config.json  input.json
doc/: Makefile
doc/source/: conf.py  configuration.rst  index.rst  installation.rst  intro.rst  running.rst  structure.rst
etc/: config.init  config.json  rc.local  sudoers  worker_server.init
etc/init.d/: turbo-hipster
etc/logrotate.d/: mysql-server  rsyslog
etc/mysql/: my.cnf
etc/turbo-hipster/: config.json  config.yaml
lib/: utils.py
task_plugins/gate_real_db_upgrade/: task.py  test_sqlalchemy_migrations.sh
tests/: base.py  disabled_common.py  disabled_jjb_runner.py  disabled_shell_task.py  disabled_worker_server.py  fakes.py  test_common.py  test_jjb_runner.py  test_nothing.py  test_real_db_upgrade.py  test_shell_task.py  test_utils.py  test_worker_manager.py  test_worker_server.py
tests/assets/: logcontent
tests/datasets/some_dataset_example/: config.json
tests/etc/: config.json  config.yaml  default-config.yaml  jjb-config.yaml  shutdown-config.yaml
tests/etc/conf.d/: extra.json  extra.yaml
tests/fixtures/: default-config.json
tests/lib/: test_utils.py
tests/task_plugins/gate_real_db_upgrade/: test_handle_results.py  test_upgrade_task.py
tools/: push_to_cloudfiles.py  setup_software.sh  update_datasets.sh  zuul_enqueue.py
tools/jjb_coverage/: .gitignore  generate_json.py
tools/jjb_coverage/public_html/: app.js  index.html
turbo_hipster/: analyse_historical.py  queue_logger.py  report_historical.py  worker_manager.py  worker_server.py
turbo_hipster/cmd/: analyse_historical.py  queue_logger.py  report_historical.py  server.py
turbo_hipster/lib/: common.py  gerrit-git-prep.sh  models.py  utils.py
turbo_hipster/task_plugins/gate_real_db_upgrade/: baseline.sh  gerrit-git-prep.sh  handle_results.py  makenetnamespace.sh  nova-manage-wrapper.sh  nova_mysql_migrations.sh  task.py
turbo_hipster/task_plugins/gate_real_db_upgrade/datasets/some_dataset_example/: config.json  logging.conf
turbo_hipster/task_plugins/jjb_runner/: task.py
turbo_hipster/task_plugins/real_db_upgrade/: handle_results.py  nova_mysql_migrations.sh  task.py
turbo_hipster/task_plugins/recheck_stale_checks/: task.py
turbo_hipster/task_plugins/shell_script/: task.py
turbo_hipster/tests/: test_worker_server.py
