[metadata]
name = turbo-hipster
summary = A set of CI tools for openstack
description-file = README.md
author = Rackspace Australia
author-email = joshua.hesketh@rackspace.com
url = https://github.com/rcbau/turbo-hipster
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    turbo_hipster

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    turbo-hipster = turbo_hipster.cmd.server:parse_args
    turbo-hipster-analyse = turbo_hipster.cmd.analyse_historical:main
    turbo-hipster-report = turbo_hipster.cmd.report_historical:main
    turbo-hipster-queue-logger = turbo_hipster.cmd.queue_logger:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
